  e.g. planned maintenance
  (https://github.com/csmith/goplum/issues/31[#31])
* Added `plumctl` command line tool that uses the API to
  interact with a GoPlum instance.
  See the link:docs/plumctl.adoc[plumctl docs] for further
  information.
* The configuration file now supports plugin-specific
  config via `plugin <identifier> {}` blocks.
  (https://github.com/csmith/goplum/issues/33[#33])

=== Changes

* Small improvement to error messages for invalid config keys
* GoPlum now errors if checks or alerts have duplicate names
  (this was previously documented but not enforced)
* Plugins can now implement the Validator interface to check
  their own configuration in the same way as Alerts and Checks

== v0.3.0

=== Features

* The `http.get` check can now make sure content *isn't* present
  (https://github.com/csmith/goplum/issues/28[#28])
* The `http.get` check now supports basic authentication
  (https://github.com/csmith/goplum/issues/7[#7])
* Added a timeout setting for checks, and updated bundled plugins
  to respect it (https://github.com/csmith/goplum/issues/10[#10])
* Check state is now persisted across restarts
  (https://github.com/csmith/goplum/issues/14[#14])
* Added `twilio.call` alert for announcing alerts using TTS
  over a phone call.
* Added `http.healthcheck` check for monitoring healthcheck endpoints.
  (https://github.com/csmith/goplum/issues/2[#2])

=== Changes

* Added boolean support to configuration files
** The following are now reserved keywords: `yes`, `no`, `true`, `false`, `on`, `off`
* Keywords in configuration files are now case-insensitive
* The "network" argument in `network.connect` is now actually optional,
  per its documentation.

== v0.2.0

=== Features

* Switched to a custom config format instead of JSON
* Added `exec.command` check (https://github.com/csmith/goplum/issues/9[#9])
* Added `pushover.message` alert (https://github.com/csmith/goplum/issues/23[#23])