@@ -5,6 +5,7 @@ import (
 	"github.com/csmith/goplum"
 	"github.com/csmith/goplum/plugins/debug"
 	"github.com/csmith/goplum/plugins/exec"
+	"github.com/csmith/goplum/plugins/heartbeat"
 	"github.com/csmith/goplum/plugins/http"
 	"github.com/csmith/goplum/plugins/network"
 	"github.com/csmith/goplum/plugins/pushover"
@@ -20,6 +21,9 @@ var (
 var plugins = map[string]goplum.PluginLoader{
 	"exec": func() (goplum.Plugin, error) {
 		return exec.Plugin{}, nil
+	},
+	"heartbeat": func() (goplum.Plugin, error) {
+		return &heartbeat.Plugin{}, nil
 	},
 	"http": func() (goplum.Plugin, error) {
 		return http.Plugin{}, nil
